--- a/project-note/合家云社区物业管理平台/合家云社区项目.md
+++ b/project-note/合家云社区物业管理平台/合家云社区项目.md
@@ -46,8 +46,6 @@ SpringBoot、Spring Security、MyBatis-plus、MySQL、Redis
 
 ### （3）库表设计
 
-> 详见数据库设计文档
-
 # 二、业务开发
 
 ## 1.项目搭建
@@ -99,35 +97,110 @@ SpringBoot、Spring Security、MyBatis-plus、MySQL、Redis
 
 ### （3）IDEA连接MySQL
 
+使用mybatis-x插件生成实体类、mapper接口、service、mapper.xml
 
+### （4）接口统一规范
 
+#### 响应
 
+* **code ：响应状态码**
+* **message ：响应结果描述**
+* **data：返回的数据**
 
+enum ResponseCode，class ResponseResult<T>
 
+#### 参数校验
 
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+```
 
+以下是一些常用的校验注解及其用途：
 
+1. **@NotNull**
+   - 验证字段不为 `null`。
+   - 适用于任何对象类型。
 
+2. **@NotEmpty**
+   - 验证字段既不为 `null` 也不为空。
+   - 适用于 `CharSequence`（如 `String`）、`Collection`、`Map` 或数组。
 
+3. **@NotBlank**
+   - 验证 `CharSequence` 类型的字段不为 `null`，且必须至少包含一个非空白字符。
+   - 主要用于验证字符串。
 
+4. **@Min(value)**
+   - 验证数值或其封装类型的字段值必须大于或等于指定的最小值。
+   - 适用于数字类型字段。
 
+5. **@Max(value)**
+   - 验证数值或其封装类型的字段值必须小于或等于指定的最大值。
+   - 适用于数字类型字段。
 
+6. **@Size(min=, max=)**
+   - 验证字段（`Collection`、`Map`、数组或字符串类型）的大小是否在指定的范围内。
+   - `min` 和 `max` 属性允许你指定范围。
 
+7. **@Email**
+   - 验证字段必须是一个格式正确的电子邮件地址。
+   - 适用于字符串类型字段。
 
+8. **@Positive**
+   - 验证数值必须为正数。
+   - 适用于数值类型字段。
 
+9. **@PositiveOrZero**
+   - 验证数值必须为正数或零。
+   - 适用于数值类型字段。
 
+10. **@Negative**
+    - 验证数值必须为负数。
+    - 适用于数值类型字段。
 
+11. **@NegativeOrZero**
+    - 验证数值必须为负数或零。
+    - 适用于数值类型字段。
 
+12. **@Past**
+    - 验证日期或时间值必须在当前时间之前。
+    - 适用于日期和时间类型字段。
 
+13. **@PastOrPresent**
+    - 验证日期或时间值必须在当前时间或之前。
+    - 适用于日期和时间类型字段。
 
+14. **@Future**
+    - 验证日期或时间值必须在当前时间之后。
+    - 适用于日期和时间类型字段。
 
+15. **@FutureOrPresent**
+    - 验证日期或时间值必须在当前时间或之后。
+    - 适用于日期和时间类型字段。
 
+16. **@Pattern(regexp)**
+    - 验证字符串字段是否符合指定的正则表达式。
+    - `regexp` 属性用于定义正则表达式。
 
+这些注解为不同类型的数据提供了广泛的验证支持，可应用于企业级应用的多种场景中，确保数据的完整性和准确性。
 
+#### 异常
 
+ExceptionCode、GlobalExceptionHandler
 
+## 2.社区资产模块
 
+### （1）需求分析
 
+社区资产模块主要管理小区信息、楼栋信息、单元信息及房屋信息的数据更新与维护。
+
+管理内容有多条件分页查询，修改信息，导入导出Excel
+
+### （2）库表设计
+
+### （3）多条件分页查询
 
 
 
