--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -403,17 +403,15 @@ public class Client {
 
 ### （1）概述
 
-代理模式作为一种结构型设计模式，主要用于间接访问某个对象，同时添加一些控制这种访问的功能。它是一种非常有用的模式，特别是在需要控制或增强对某个对象访问的情况下。
+代理模式作为一种结构型设计模式，主要用于间接访问某个对象，同时添加一些控制这种访问的功能。
 
 在代理模式中，代理（Proxy）通过实现与真实主题（Real Subject）相同的接口，成为客户端和真实主题之间的中介。代理对象内部包含对真实主题的引用，控制着对真实主题的访问，并可以在调用真实主题的方法前后执行其他操作。这种结构允许进行各种操作，比如安全检查、增强功能、管理资源等。
-
-### （2）组成
 
 - **抽象主题（Subject）类**：这是一个接口或抽象类，定义代理和真实主题必须实现的方法，确保代理可以在任何需要真实主题的场合被使用。
 - **真实主题（Real Subject）类**：这个类实现了抽象主题的业务操作，定义了代理所代表的真实对象。
 - **代理（Proxy）类**：代理含有对真实主题的引用，通常会处理所有的对真实主题的访问请求。代理通常在执行真实主题的一个操作前后进行其它操作，如执行安全检查、修改请求、管理资源、缓存结果等。
 
-### （3）静态代理
+### （2）静态代理
 
 静态代理是在编译时就已经确定了代理类和目标类的关系。在这种代理模式中，代理类和目标类通常会实现相同的接口或继承相同的抽象类，代理类需要显式地声明它代理的目标对象，并在内部持有目标对象的引用。
 
@@ -429,49 +427,41 @@ interface Image {
 }
 
 // Real Subject
-class RealImage implements Image {
-    private String filePath;
+class ProxyImage implements Image {
+    private RealImage realImage;
 
-    public RealImage(String filePath) {
-        this.filePath = filePath;
-        loadFromDisk();
-    }
-
-    private void loadFromDisk() {
-        System.out.println("Loading " + filePath);
+    public ProxyImage(RealImage realImage) {
+        this.realImage = realImage;
     }
 
     @Override
     public void display() {
-        System.out.println("Displaying " + filePath);
+        System.out.println("Display placeholder while loading the image");
+        realImage.display();
     }
 }
 
 // Proxy
 class ProxyImage implements Image {
     private RealImage realImage;
-    private String filePath;
 
-    public ProxyImage(String filePath) {
-        this.filePath = filePath;
+    public ProxyImage(RealImage realImage) {
+        this.realImage = realImage;
     }
 
     @Override
     public void display() {
-        if (realImage == null) {
-            System.out.println("Display placeholder while loading the image");
-            realImage = new RealImage(filePath);
-        }
+        System.out.println("Display placeholder while loading the image");
         realImage.display();
     }
 }
 ```
 
-### （4）动态代理
+### （3）JDK动态代理
 
-动态代理不需要显式地定义代理类；代理类在运行时被动态创建。Java 提供了几种动态代理的实现方式，最常见的是使用 `java.lang.reflect.Proxy` 类和 `java.lang.reflect.InvocationHandler` 接口。
+代理类在运行时被动态创建。Java 最常见的是使用 `java.lang.reflect.Proxy` 类和 `java.lang.reflect.InvocationHandler` 接口。
 
-- java.lang.reflect Proxy，主要方法为
+- java.lang.reflect Proxy主要方法为
 
   ```java
   static Object newProxyInstance(
@@ -482,7 +472,7 @@ class ProxyImage implements Image {
   //返回一个指定接口的代理类实例，该接口可以将方法调用指派到指定的调用处理程序。
   ```
 
-- java.lang.reflect InvocationHandler，主要方法为
+- java.lang.reflect InvocationHandler主要方法为
 
   ```java
   Object invoke(Object proxy, Method method, Object[] args) 
@@ -491,62 +481,27 @@ class ProxyImage implements Image {
 
 **示例**
 
-假设我们有一个接口和一个实现该接口的类，我们想为这个类的方法调用添加日志记录功能。
-
 ```java
-interface Service {
-    void perform();
-}
-
-class RealService implements Service {
-    @Override
-    public void perform() {
-        System.out.println("Performing service");
-    }
-}
-```
-
-接下来，我们将创建一个 `InvocationHandler` 实现，用于在调用 `RealService` 的方法前后添加日志输出。
-
-```java
-class LoggingHandler implements InvocationHandler {
-    private final Object target;
-
-    public LoggingHandler(Object target) {
+public class ProxyFactory {
+    private Object target;
+    public ProxyFactory(Object target) {
         this.target = target;
     }
-
-    @Override
-    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-        System.out.println("Entering " + method.getName());
-        Object result = method.invoke(target, args);
-        System.out.println("Exiting " + method.getName());
-        return result;
+    public Object getProxy() {
+        return Proxy.newProxyInstance(target.getClass().getClassLoader(), target.getClass().getInterfaces(), new InvocationHandler() {
+            @Override
+            public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+                System.out.println("Display placeholder while loading the image");
+                return method.invoke(target, args);
+            }
+        });
     }
 }
 ```
-
-现在我们可以使用 `Proxy.newProxyInstance` 方法来创建 `Service` 接口的动态代理实例。
-
-```java
-public class ProxyDemo {
-    public static void main(String[] args) {
-        Service realService = new RealService();
-        Service proxyService = (Service) Proxy.newProxyInstance(
-            RealService.class.getClassLoader(),
-            new Class<?>[] { Service.class },
-            new LoggingHandler(realService)
-        );
-
-        // 调用代理的方法
-        proxyService.perform();
-    }
-}
-```
-
-
 
 动态代理类的字节码是在运行时创建的。Java 使用 `java.lang.reflect.Proxy` 类和 `java.lang.reflect.InvocationHandler` 接口实现动态代理。核心方法 `Proxy.newProxyInstance` 能够在运行时动态创建代理类。这个过程大致包括以下步骤：
+
+![image-20240717170453659](./assets/image-20240717170453659.png)
 
 1. **确定代理类的名称**：通常形式为 `com.sun.proxy.$ProxyN`，其中 `N` 是一个递增的数字。
 2. **生成代理类的字节码**：根据传递给 `newProxyInstance` 方法的接口列表和调用处理器，动态生成代理类的字节码。这个过程由 `ProxyClassFactory` 完成，它调用 `ProxyGenerator.generateProxyClass` 方法来生成字节码。
@@ -555,11 +510,87 @@ public class ProxyDemo {
 
 生成的代理类实际上继承自 `Proxy` 类并实现了指定的接口。代理类中的每个方法实际上是通过调用其 `InvocationHandler` 的 `invoke` 方法来实现的。这样，当代理类的方法被调用时，实际执行的是 `InvocationHandler` 中的代码。
 
+### （4）CGLIB动态代理
+
+CGLIB（Code Generation Library）是一个强大的、高性能、高质量的代码生成库，用于在运行时扩展 Java 类和实现接口。与 JDK 动态代理只能代理实现了接口的类不同，CGLIB 能够直接代理没有实现接口的类。
+
+- **Enhancer**：这是 CGLIB 的核心类，用于生成代理类。它可以用于在运行时动态生成一个给定类的子类，并拦截所有的方法调用。
+
+  ```java
+  Enhancer enhancer = new Enhancer();
+  enhancer.setSuperclass(MyClass.class); // 设置需要创建子类的类
+  enhancer.setCallback(new MethodInterceptor() { // 设置方法拦截器
+      public Object intercept(Object obj, Method method, Object[] args, MethodProxy proxy) throws Throwable {
+          System.out.println("Before method call");
+          Object result = proxy.invokeSuper(obj, args);
+          System.out.println("After method call");
+          return result;
+      }
+  });
+  MyClass myClassProxy = (MyClass) enhancer.create(); // 创建代理对象
+  ```
+
+**主要方法**
+
+- **Enhancer.create()**：创建代理类的实例。该方法负责生成目标类的子类，并实例化这个代理对象。
+- **MethodInterceptor** 接口实现：这是一个回调接口，其 `intercept` 方法将在原方法调用前后被执行。这类似于 JDK 的 `InvocationHandler`，但是它提供了对原始方法的调用能力，即可以调用 `MethodProxy.invokeSuper`。
+  - **Object obj**
+    - **描述**：这是代理类的实例，即方法调用的“this”对象。通常，你不会直接使用这个对象调用方法，因为它会导致递归调用自身从而引发栈溢出。
+    - **用途**：可以用来获取关于代理实例的信息，如类信息等。
+  - **Method method**
+    - **描述**：这是被调用的方法的反射对象 (`java.lang.reflect.Method`)。它表示原始类中被拦截的方法。
+    - **用途**：可以通过这个对象获取方法的元数据（如方法名、返回类型、参数类型等），或者用它在其他对象上调用相同的方法。
+  - **Object[] args**
+    - **描述**：这是方法调用时传递的参数数组。数组中的每个元素对应一个方法参数。
+    - **用途**：可以修改这些参数值或根据这些参数执行特定逻辑，还可以在调用原始方法或其他方法时使用这些参数。
+  - **MethodProxy proxy**
+    - **描述**：这是方法代理的 CGLIB 提供的特殊对象。`MethodProxy` 是性能优化了的方法调用代理，比直接使用反射更高效。
+    - 用途：
+      - **invoke**：可以使用这个代理对象在原始对象（非代理对象）上调用原始方法。
+      - **invokeSuper**：可以调用对象的超类实现（即代理类的父类中的实现），这通常用于执行原始方法的调用。这种调用方式避免了直接使用 `method.invoke` 可能引起的无限递归问题。
 
 
+示例代码
 
+```java
+public class CglibProxyFactory implements MethodInterceptor{
+    private Object target;
+    public CglibProxyFactory(Object target) {
+        this.target = target;
+    }
+    public Object getProxy() {
+        Enhancer enhancer = new Enhancer();
+        enhancer.setSuperclass(target.getClass());
+        enhancer.setCallback(this);
+        return enhancer.create();
+    }
 
+    @Override
+    public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+        System.out.println("Display placeholder while loading the image");
+        return methodProxy.invokeSuper(o, objects);
+    }
+}
+```
 
+1. **确定代理类的类型**：动态生成目标类的子类作为代理类。
+2. **生成代理类的字节码**：CGLIB 库内部使用 `ASM`，一种基于 Java 字节码的操作和分析框架，来生成新的类。
+3. **加载代理类到 JVM**：使用目标类的类加载器，将生成的字节码加载到 JVM。
+4. **创建代理实例**：通过调用 Enhancer 的 `create()` 方法创建代理实例。
+
+CGLIB 由于能够直接代理类而不仅仅是接口，因此在使用 Spring 或 Hibernate 时尤其有用，当一个类没有实现接口时，Spring 会自动使用 CGLIB 来创建代理对象。
+
+### （5）JDK动态代理于CGLIB动态代理
+
+**当对象实现了接口时**：优先使用 JDK 动态代理，因为它不需要额外的库，且足够简单。
+
+**当对象没有实现接口时**：必须使用 CGLIB，因为 JDK 动态代理无法应用。
+
+**性能敏感的系统**：CGLIB 通常提供更好的性能，因此在性能需求较高的情况下，即使对象实现了接口，也可能优先选择 CGLIB。
+
+在 Spring 框架中，当 AOP 被应用到 bean 上时，默认情况下，Spring 会使用 JDK 动态代理。如果被代理的 bean 没有实现任何接口，则 Spring 会自动切换到 CGLIB。这种灵活的策略让 Spring 能够更好地适应不同的开发需求。
+
+总的来说，JDK 动态代理和 CGLIB 动态代理各有优势，适合不同的场景。理解它们的差异和特点可以帮助开发者在特定的应用场景中做出更合适的技术选择。
 
 
 
